Create unfollow API route
