# app/controllers/api/v1/users/relationships_controller.rb
@@ -13,6 +13,17 @@ class Api::V1::Users::RelationshipsController < ApplicationController
     end
   end
 
+  # DELETE /api/v1/users/:user_id/relationships/:target_user_id
+  def destroy
+    service = Relationship::UnfollowUser.call(unfollower: @user, unfollowed_user: @target_user)
+
+    if service.success?
+      head :no_content
+    else
+      render_error(:unprocessable_content, service.error_message, service.error_details)
+    end
+  end
+
   private
 
   def set_user
