# config/routes.rb
@@ -20,7 +20,7 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       resources :users, only: %i[index show create destroy] do
-        resources :relationships, only: %i[create destroy], module: :users, controller: :relationships
+        resources :relationships, param: :target_user_id, only: %i[create destroy], module: :users, controller: :relationships
       end
     end
   end
